<resources>
    <string name="app_name">区分</string>
    <string name="mob_sdk_key">25fecb277347b</string>
    <string name="mob_sdk_var">32ee70fd96c34aeb83b639f7a06ae04</string>
    <string name="text_password">0123456789abcdefgjhigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_in">登录</string>
    <string name="start_use">开始使用</string>
    <string name="forget_password">忘记密码</string>
    <string name="old_user_login">老用户登录</string>
    <string name="hint_password">请输入密码</string>
    <string name="reg_password">请输入长度8-20位且数字字母组合的密码</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="registered_account">注册账号</string>
    <string name="registered_login">登录注册</string>
    <string name="forget_password_btn">确定</string>
    <string name="search">搜索</string>
    <string name="main_tab_home_page">主页</string>
    <string name="main_tab_topic">发现</string>
    <string name="main_tab_project">项目</string>
    <string name="main_tab_info">资讯</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_mine">我的</string>
    <string name="main_fragment_recommend">推荐</string>
    <string name="main_fragment_follow">关注</string>
    <string name="main_fragment_discuss">讨论</string>
    <string name="main_fragment_bluesky">悬赏</string>
    <string name="main_publish">发表</string>
    <string name="register_account">注册账号</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="verification">验证码</string>
    <string name="hit_verification">输入验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="anew_get">重新获取</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>
    <string name="new_password">新密码</string>
    <string name="intro">简介</string>
    <string name="review">评测</string>
    <string name="discuss">讨论</string>
    <string name="article">文章</string>
    <string name="market">行情</string>
    <string name="news">新闻</string>
    <string name="assessment_agenc">评测机构</string>
    <string name="answer">内容</string>
    <string name="like">赞</string>
    <string name="fan">粉丝</string>
    <string name="my_home_page">我的主页</string>
    <string name="the_home_page_of">的主页</string>
    <string name="grade">短评></string>
    <string name="grade_num">评分人数</string>
    <string name="attention">关注</string>
    <string name="project_intro">项目简介</string>
    <string name="english_name">英文名</string>
    <string name="chinese_name">中文名</string>
    <string name="issue_ltzl">流通总量</string>
    <string name="issue_fxzl">发行总量</string>
    <string name="issue_time">发行时间</string>
    <string name="official_website">官网</string>
    <string name="related_notion">相关概念</string>
    <string name="white_book">白皮书</string>
    <string name="station_agent">站长</string>
    <string name="active_user">活跃用户</string>
    <string name="share">分享</string>
    <string name="rule">悬赏规则</string>
    <string name="save">保存</string>
    <string name="ok">完成</string>
    <string name="cancel">取消</string>
    <string name="comprehensive_evaluation">综合评分</string>
    <string name="project_location">项目定位</string>
    <string name="technical_framework">技术框架</string>
    <string name="team_strength">团队实力</string>
    <string name="project_schedule">项目进度</string>
    <string name="speculative_risk">投资风险</string>
    <string name="assessment">精选评测</string>
    <string name="assessment_new">最新评测</string>
    <string name="crack_down">讨论</string>
    <string name="project_was_assessed">评测了项目</string>
    <string name="name_authentication">实名认证后获取更多权益\n注册奖励领取、内容奖励、评分加权</string>
    <string name="network_error">请检查您的网络</string>
    <string name="mine_text_1">未绑定</string>
    <string name="mine_text_2">个人信息</string>
    <string name="mine_text_3">头像</string>
    <string name="mine_text_4">昵称</string>
    <string name="mine_text_5">性别</string>
    <string name="mine_text_6">所在地</string>
    <string name="mine_text_7">个人简介</string>
    <string name="mine_text_8">用户类型</string>
    <string name="mine_text_9">账户设置</string>
    <string name="mine_text_10">绑定手机号</string>
    <string name="mine_text_11">绑定微信</string>
    <string name="mine_text_12">绑定邮箱</string>
    <string name="mine_text_13">重置密码</string>
    <string name="mine_text_14">检查版本</string>
    <string name="mine_exe_login">退出当前账号</string>
    <string name="set_my_name">设置个人昵称</string>
    <string name="set_my_signature">设置个人简介</string>
    <string name="mine_topic">项目</string>
    <string name="mine_user">用户</string>
    <string name="mine_message_sate">全部已读</string>
    <string name="mine_title">实名认证</string>
    <string name="mine_name">姓名</string>
    <string name="mine_input_name">请输入姓名</string>
    <string name="mine_defeated">失败原因：</string>
    <string name="mine_number">身份证号</string>
    <string name="mine_anew">重新认证</string>
    <string name="mine_input_number">请输入身份证号</string>
    <string name="mine_input_number_ok">身份证号格式不正确</string>
    <string name="mine_uploading_pic">请上传手持身份证照</string>
    <string name="under_review">审核中</string>
    <string name="under_not_review">审核未通过</string>
    <string name="under_yes_review">审核通过</string>
    <string name="mine_last_step">上一步</string>
    <string name="mine_submit">提交</string>
    <string name="mine_help">帮助中心</string>
    <string name="mine_submit_require_1">上传要求：\n1、照片需免冠，手持证件人的五官清晰可见，完整露出双手手臂\n2、照片内容真实有效，不得做任何修改\n3、支持jpg/jepg/png格式，最大不超过5M\n4、手写文案：我确认在“区分”上所有行为为本人操作\n&#160;&#160;&#160;&#160;（附上自己签名以及当天日期）</string>
    <string name="mine_submit_require">上传要求：\n1、照片需免冠，手持证件人的五官清晰可见，完整露出双手手臂\n2、照片内容真实有效，不得做任何修改\n3、支持jpg/jepg/png格式，最大不超过5M</string>
    <string name="mine_submit_require_0">4、手写文案：</string>
    <string name="mine_submit_require_00"><u>仅用于区分注册（附上当天日期，示例）。</u></string>
    <string name="asset_details">资产明细</string>
    <string name="bill">账单</string>
    <string name="find_num">FIND总数 (个)</string>
    <string name="usable_num">可用数量 (FIND)</string>
    <string name="lock">锁仓</string>
    <string name="record">记录</string>
    <string name="unlock_the">解锁中</string>
    <string name="send">发放中</string>
    <string name="usable">可用</string>
    <string name="wallet_site">绑定钱包地址</string>
    <string name="expenditure">账单明细</string>
    <string name="award_expenditure">奖励明细</string>
    <string name="send_find">发放中(FIND)</string>
    <string name="yi_send_find">已发放(FIND)</string>
    <string name="ytf_site">以太坊地址</string>
    <string name="ytf_site_infuse">注：请绑定以太坊地址。</string>
    <string name="binding_ok">确认绑定</string>
    <string name="binding_end">已绑定</string>
    <string name="change_site">更换地址</string>
    <string name="extract_find">提取&#160;&#160;FIND</string>
    <string name="recharge_find">充值&#160;&#160;FIND</string>
    <string name="extract_find_title">提取FIND</string>
    <string name="extract_find_jl"><![CDATA[邀请总收益<font color="#FFD87C"><b>%1$s</b></font> FIND]]></string>
    <string name="lock_find_num">锁定数量 (FIND)</string>
    <string name="clear_find">解锁FIND</string>
    <string name="input_num">请输入解锁数量</string>
    <string name="warn">锁仓数量和时间影响您的区分指数，请慎重解锁</string>
    <string name="warn_usable">增加锁仓数量将提高您的区分指数，锁仓后可在系统内使用。</string>
    <string name="explain_title">说明：</string>
    <string name="explain_1">1、</string>
    <string name="explain_11">2、</string>
    <string name="explain_2">区分指数与锁定FIND的数量和时间密切相关，锁仓数量越多，锁仓时间越长，区分指数越高。</string>
    <string name="explain_3">2、解锁需要等待30天。</string>
    <string name="explain_4">锁仓数量越多，锁仓时间越长，区分指数越高。</string>
    <string name="explain_5">锁仓后的Find可以在系统内使用，譬如发起评测、打赏、提问等。</string>
    <string name="explain_6">说明：最小提取数量为2000，每月可提取1次，</string>
    <string name="confirm_extract">确认提取</string>
    <string name="all_extract">全部提取</string>
    <string name="extract_record">提取记录</string>
    <string name="wallet_site_1">钱包地址</string>
    <string name="wallet_change">更换钱包</string>
    <string name="find_usable">可提取数量 (FIND)</string>
    <string name="find_usable_add">累计提取数量 (FIND)</string>
    <string name="permission_ask_now">您需要打开%1$s权限</string>
    <string name="permission_ask_error">申请%1$s权限失敗，请在应用详情中打开</string>
    <string name="follow_status_0">+关 注</string>
    <string name="follow_status_1">已关注</string>
    <string name="sort_love">按点赞排序</string>
    <string name="sort_time">按时间排序</string>
    <string name="dialog_loading">请稍后...</string>
    <string name="sponsor">赞助</string>
    <string name="sponsor_title">为人赞助</string>
    <string name="comment">评论</string>
    <string name="sponsor_num">人已赞助</string>
    <string name="share_link">复制链接</string>
    <string name="block_chain">投资区块链</string>
    <string name="bound_to">一定要</string>
    <string name="find">区分</string>
    <string name="evaluation_simpleness">短评</string>
    <string name="evaluation_professional">精评</string>
    <string name="evaluation_btn_new">自定义化评测</string>
    <string name="evaluation_btn_compile">FIND模型评测</string>
    <string name="evaluation">单项测评</string>
    <string name="evaluation_dimensionality">评测维度</string>
    <string name="evaluation_add_dimensionality">添加纬度</string>
    <string name="evaluation_num">可新增评测纬度，比例之和为1</string>
    <string name="evaluation_object">评测对象</string>
    <string name="evaluation_next">下一步</string>
    <string name="evaluation_issue">发布</string>
    <string name="evaluation_state">评测模型说明></string>
    <string name="evaluation_write">写评测</string>
    <string name="evaluation_custom_dimensionality">自定义纬度</string>
    <string name="evaluation_name">名称</string>
    <string name="evaluation_weight">权重</string>
    <string name="evaluation_grade">分数</string>
    <string name="evaluation_hint_name">填写纬度名称</string>
    <string name="evaluation_hint_weight">填写权重(0-1)，最多2位小数</string>
    <string name="evaluation_hint_grade">填写分数(1-10)，最多1位小数</string>
    <string name="evaluation_state_ts">尊敬的项目分析师：\n\n为了保证区分平台项目分析的公正性，您的内容一旦发布将不可修改和删除，请对您的内容和打分再次确认。</string>
    <string name="evaluation_hint">请安规则输入</string>
    <string name="evaluation_state_1">点击每个板块对应的“单项评测”，可进行单项评测，可任选模块评测，也可全评；\n\n点击左下方“自定义化评测”，可直接发布评测文章，也可自建模型再评测；\n\n点击右下方“FIND模型评测”，按照区分模型进行评测。</string>
    <string name="selector_photo_1">从手机相册中选择</string>
    <string name="selector_photo_2">拍照上传</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="select_time">选择时间</string>
    <string name="submit_project_logo">项目图标</string>
    <string name="submit_project_title">提交项目</string>
    <string name="submit_project_0">点击上传代币主图</string>
    <string name="submit_project_1">代币名称</string>
    <string name="submit_project_11">请输入名称(如:BTC)</string>
    <string name="submit_project_2">英文名称</string>
    <string name="submit_project_22">请输入英文名(如:Bitcoin)</string>
    <string name="submit_project_3">中文名称</string>
    <string name="submit_project_33">请输入中文名称(如:比特币)</string>
    <string name="submit_project_4">官网</string>
    <string name="submit_project_44">请输入官网</string>
    <string name="submit_project_5">发行量</string>
    <string name="submit_project_55">请输入发行量</string>
    <string name="submit_project_6">发行时间</string>
    <string name="submit_project_66">请选择</string>
    <string name="submit_project_7">是否上市</string>
    <string name="submit_project_77">是</string>
    <string name="submit_project_777">否</string>
    <string name="submit_project_two_1">白皮书地址</string>
    <string name="submit_project_two_4">一句话简介</string>
    <string name="submit_project_two_44">请控制在30字以内</string>
    <string name="submit_project_two_11">请填写地址</string>
    <string name="submit_project_two_2">项目分类</string>
    <string name="submit_project_two_3">请在此填写项目描述...</string>
    <string name="submit_project_two_33">0/3000</string>
    <string name="submit_project_jg">项目已提交，请耐心等待审核结果！</string>
    <string name="submit_project_back">回首页</string>
    <string name="submit_project_three_1">利益相关</string>
    <string name="submit_project_three_12">普通用户</string>
</resources>