<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical">

    <com.secretk.move.customview.TabViewpager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <RadioGroup
        android:id="@+id/rg_main_parent"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5">

        <RadioButton
            style="@style/main_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_home_page_selector"
            android:onClick="go2main"
            android:text="@string/main_tab_home_page" />

        <RadioButton
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/main_tab_topic_selector"
            android:onClick="go2topic"
            android:text="@string/main_tab_topic" />

        <RadioButton
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/main_tab_message_selector"
            android:onClick="go2message"
            android:text="@string/main_tab_message" />

        <RadioButton
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/main_tab_mine_selector"
            android:onClick="go2mine"
            android:text="@string/main_tab_mine" />
    </RadioGroup>

</LinearLayout>
