<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.secretk.move.view.AppBarHeadView
        android:id="@+id/head_app_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bar_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_line"
        android:background="@color/cut_off_rule" />

    <com.secretk.move.view.RecycleScrollView
        android:id="@+id/rsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_background"
                android:padding="@dimen/dp_10">


                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:src="@drawable/ic_wallet" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/dp_12"
                        android:text="@string/usable_num"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_total_assets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1333.21"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_37" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_line"
                android:background="@color/cut_off_rule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/clear_find"
                android:textColor="@color/title_gray"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/et_binding_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/input_num"
                android:textColor="@color/title_gray"
                android:textColorHint="@color/title_gray_cc"
                android:textCursorDrawable="@drawable/shape_edit_cursor"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_line"
                android:layout_margin="@dimen/dp_10"
                android:background="@color/cut_off_rule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_10"
                android:text="@string/warn_usable"
                android:textColor="@color/title_gray_99"
                android:textSize="@dimen/sp_12" />

            <Button
                android:id="@+id/but_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginVertical="@dimen/dp_20"
                android:background="@drawable/btn_max_selected_top_radius"
                android:text="@string/evaluation_next"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:text="@string/explain_title"
                android:textColor="@color/title_gray_99"
                android:textSize="@dimen/sp_12" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="@dimen/dp_8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explain_1"
                    android:textColor="@color/title_gray_99"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/dp_8"
                    android:text="@string/explain_4"
                    android:textColor="@color/title_gray_99"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explain_11"
                    android:textColor="@color/title_gray_99"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/dp_8"
                    android:text="@string/explain_5"
                    android:textColor="@color/title_gray_99"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

        </LinearLayout>

    </com.secretk.move.view.RecycleScrollView>
</LinearLayout>