<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.secretk.move.view.AppBarHeadView
        android:id="@+id/head_app_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_25"
        android:text="欢迎回来!"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_28" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35">

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/text_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_25"
            android:padding="@dimen/dp_10"
            android:src="@drawable/selector_visible_password" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24">

        <TextView
            android:id="@+id/tv_verification_code_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="@color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/but_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/selector_login_bnt"
        android:text="@string/login_in"
        android:textColor="@drawable/selector_login_text"
        android:textSize="@dimen/sp_18" />

</LinearLayout>
