<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.secretk.move.view.AppBarHeadView
        android:id="@+id/head_app_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35">

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hit_verification"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/get_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_verification_code"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/get_verification"
            android:textColor="@color/white" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/but_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/selector_login_bnt"
        android:text="@string/forget_password_btn"
        android:textColor="@drawable/selector_login_text"
        android:textSize="@dimen/sp_18" />
</LinearLayout>
